--- a/Fractions.csproj
+++ b/Fractions.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Non-decimalFractionHelper</AssemblyName>
+    <Version>1.1.0</Version>
+    <Authors>c1nnamon-ro11</Authors>
+    <Product>FractionHelper</Product>
+    <Description>Library for work with non-decimal fractions. Supports four main operation.</Description>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
